# currency-parser

./: .env  .gitignore  README.md  currencies.json  database.db  main.py  pyproject.toml  requirements.txt
src/: container.py
src/adapter/: parsers.py
src/database/: sqlite.py
src/models/: country_curr.py
src/parsers/: countries.py  currency.py  json_curr.py
src/presentation/: app.py  router.py
src/settings/: config.py  logging_config.py
templates/: index.html  parser.html
