[tool.poetry]
name = "aton internship"
version = "0.1.0"
description = ""
authors = ["Maksim Laptev"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.7.2"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
fastapi = "^0.111.0"
dependency-injector = "^4.41.0"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
